force-app/main/default/objects/Apttus__AgreementHierarchy__c/Apttus__AgreementHierarchy__c.object-meta.xml
<CustomObject>
    <description>This defines a single instance of an agreement hierarchy relationship. It contains the leaf Id, the parent Id, the root Id, and the level.</description>
    <label>Agreement Hierarchy</label>
    <nameField>
        <label>Agreement Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>