force-app/main/default/objects/Apttus__AgreementHierarchy__c/fields/Apttus__AgreementLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementLevel__c</fullName>
    <description>The hierarchical level of the agreement of the agreement hierarchy.
It&apos;s used in the listing tree view in the agreement hierarchy to identify the indentation.</description>
    <inlineHelpText>The hierarchical level of the agreement of the agreement hierarchy.
It&apos;s used in the listing tree view in the agreement hierarchy to identify the indentation.</inlineHelpText>
    <label>Agreement Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>