force-app/main/default/objects/Apttus__AgreementHierarchy__c/fields/Apttus__AgreementParentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The agreement Id of the parent agreement within the agreement hierarchy.
Root &gt; Parent &gt; Leaf</description>
    <inlineHelpText>The agreement Id of the parent agreement within the agreement hierarchy.
Root &gt; Parent &gt; Leaf</inlineHelpText>
    <label>Agreement Parent</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Hierarchies (ParentId)</relationshipLabel>
    <relationshipName>AgreementHierarchiesParent</relationshipName>
    <type>Lookup</type>
</CustomField>